--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,3 +1,3 @@
-<h1> Welcome, <%= @user.username! %>
+<h1> Welcome, <%= @user.username%> ! </h1>
 
 <label for="addlift"> Add your lifts for the day! <a href="/lifts/new"></a>
