--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,3 +1,4 @@
-<h1> Welcome, <%= @user.username%> ! </h1>
 
-<label for="addlift"> Add your lifts for the day! <a href="/lifts/new"></a>
+<h1> Welcome, <%= @user.username %> ! </h1>
+
+<label for="addlift"> Add your lifts here <a href="/lifts/new"> </a> </label>
