--- a/app/views/lifts/new.erb
+++ b/app/views/lifts/new.erb
@@ -7,12 +7,26 @@
                     <option>Bench</option>
                     <option> Strict Press</option>
                     </select>
-  <label for="set1"> Set #1 </label>Weight: <input type="integer" name="weight"></input> Reps: <input type="integer" name="reps"></input>
-  <label for="meeting-time">Chose the start time and date of your lifting session:</label>
+  <br></br><label for="set_1"> Set #1 </label>Weight: <input type="integer" name="weight">
+
+  </input> Total Reps for Set 1: <input type="integer" name="set_1_reps"></input>
+
+  <br></br><label for="set_2"> Set #2 </label>Weight: <input type="integer" name="weight">
+
+  </input> Total Reps for Set 2: <input type="integer" name="set_2_reps"></input>
+
+  <br></br><label for="set_3"> Set #3 </label>Weight: <input type="integer" name="weight">
+
+  </input> Total Reps for Set 3: <input type="integer" name="set_3_reps"></input>
+
+  <br></br><label for="set_4"> Set #4 </label>Weight: <input type="integer" name="weight">
+
+  </input> Total Reps for Set 4: <input type="integer" name="set_4_reps"></input>
+
+<br></br><label for="lifting-time">Chose the start time and date of your lifting session:</label>
 
   <input type="datetime-local" id="start_time"
-       name="start_time" value="2018-06-12T19:30"
-       min="2018-06-07T00:00" max="2018-06-14T00:00">
+       name="start_time" value="2018-06-12T19:30">
 
   <input type="submit" value ="Submit"> </input>
 </form>
