--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
 
 <h1> Welcome, <%= @user.username %> ! </h1>
 
-<label for="addlift"> Add your lifts here <a href="/lifts/new"> </a> </label>
+<li><a href="http://167.99.15.173:40972/lifts/new">Add new lifting sessions</a></li>
