Fixing issues with lifts.erb

--- a/app/views/lifts/new.erb
+++ b/app/views/lifts/new.erb
@@ -23,10 +23,14 @@
 
   </input> Total Reps for Set 4: <input type="integer" name="set_4_reps"></input>
 
-<br></br><label for="lifting-time">Chose the start time and date of your lifting session:</label>
+<br></br><label for="lifting-time">Date and start time of lifting session:</label>
 
   <input type="datetime-local" id="start_time"
-       name="start_time" value="2018-06-12T19:30">
+       name="start_time">
+<br></br> <br></br><label for="lifting-time">End time of your lifting session:</label>
+
+  <input type="datetime-local" id="end_time"
+       name="end_time">
 
   <input type="submit" value ="Submit"> </input>
 </form>
