--- a/app/views/lifts/lifts.erb
+++ b/app/views/lifts/lifts.erb
@@ -1,6 +1,6 @@
-
 <% @user.lifts.each do |lift| %>
-  <label for="start_time"> </label>  <%lift.start_time%>
+
+  <b><label for="start_time"> </label>  <%=lift.start_time%></b>
   <br></br> <%=lift.name %>
   <label for="set_1_reps"></label>Set 1 Reps <%=lift.set_1_reps %>
   <label for="set_2_reps"> </label> Set 2 Reps <%lift.set_2_reps%>
