Fixing /lifts/:id - params[:id] record not found

--- a/app/views/lifts/new.erb
+++ b/app/views/lifts/new.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/lifts/new">
+<form method="post" action="/lifts">
 <h1> Add your completed lifts for the day </h1>
 
 <label for="lift1">Lift # 1 </label><select id="lift1" name="name">
