--- a/app/views/lifts/new.erb
+++ b/app/views/lifts/new.erb
@@ -7,19 +7,19 @@
                     <option>Bench</option>
                     <option> Strict Press</option>
                     </select>
-  <br></br><label for="set_1"> Set #1 </label>Weight: <input type="integer" name="weight">
+  <br></br><label for="set_1"> Set #1 </label>Weight: <input type="integer" name="set_1_weight">
 
   </input> Total Reps for Set 1: <input type="integer" name="set_1_reps"></input>
 
-  <br></br><label for="set_2"> Set #2 </label>Weight: <input type="integer" name="weight">
+  <br></br><label for="set_2"> Set #2 </label>Weight: <input type="integer" name="set_2_weight">
 
   </input> Total Reps for Set 2: <input type="integer" name="set_2_reps"></input>
 
-  <br></br><label for="set_3"> Set #3 </label>Weight: <input type="integer" name="weight">
+  <br></br><label for="set_3"> Set #3 </label>Weight: <input type="integer" name="set_3_weight">
 
   </input> Total Reps for Set 3: <input type="integer" name="set_3_reps"></input>
 
-  <br></br><label for="set_4"> Set #4 </label>Weight: <input type="integer" name="weight">
+  <br></br><label for="set_4"> Set #4 </label>Weight: <input type="integer" name="set_4_weight">
 
   </input> Total Reps for Set 4: <input type="integer" name="set_4_reps"></input>
 
