Authenticated current user's id against the @lift's user_id

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
 
 <h1> Welcome, <%= @user.username %> ! </h1>
 
-<li><a href="http://167.99.15.173:40972/lifts/new">Add new lifting sessions</a></li>
+<li><a href="/lifts/new">Add new lifting sessions</a></li>
