--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,14 +1,14 @@
 <div class="container">
-  <header><img src="images/corneal-small.png" class="img-responsive main-image"></header>
+  <header><img src="https://imgur.com/a/s4woZKs" class="img-responsive main-image"></header>
   <div class="col-md-8 col-md-offset-2">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <h2>Sinatra Template Default Page</h2>
+<h2>Welcome to LiftingLog!</h2>
     <div class="container">
     <div class="content">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <div class="jumbotron">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <a href="/login"> Login here! </a>
 
       <a href="https://github.com/thebrianemory/corneal">README</a>.</p>
     </div>
