--- a/app/views/lifts/new.erb
+++ b/app/views/lifts/new.erb
@@ -32,5 +32,5 @@
   <input type="datetime-local" id="end_time"
        name="end_time">
 
-  <input type="submit" value ="Submit"> </input>
+  <button type="submit" class = "btn btn-success btn-xs" role = "button">Submit</button>
 </form>
