--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -5,6 +5,6 @@
 <label for="email">Email: <input type="text" name="email" id="email"> </input> </label>
 
 <label for="password">Password: <input type="text" name="password" id="password"> </input> </label>
-<input type="submit" id="submit">
+<button type="submit" class = "btn btn-success btn-xs" role = "button">Submit</button>
 
 </form>
