--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,27 +1,13 @@
 <div class="container">
-  <header><img src="https://imgur.com/a/s4woZKs" class="img-responsive main-image"></header>
+  <header><img href="https://imgur.com/a/s4woZKs" class="img-responsive main-image"></header>
   <div class="col-md-8 col-md-offset-2">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<h2>Welcome to LiftingLog!</h2>
+<font size="20"><p class="text-primary"> Welcome to LiftingLog! </p>
     <div class="container">
     <div class="content">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <div class="jumbotron">
-      <a href="/login"> Login here! </a>
+      <p class="text-primary"> <a href="/login"> Login here! </a> </p>
 
       <a href="https://github.com/thebrianemory/corneal">README</a>.</p>
-    </div>
-
-    <div class="sidebar">
-      <h3>Environment</h3>
-      <ul>
-        <li><b>Ruby:</b> <%= RUBY_VERSION %></li>
-        <li><b>Environment:</b> <%= ENV["RACK_ENV"] %></li>
-        <li><b>Server:</b> <%= @env["SERVER_SOFTWARE"] %></li>
-        <li><b>Port:</b> <%= @env["SERVER_PORT"] %></li>
-      </ul>
-    </div>
-
-  </div>
-</div>
