--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,14 +13,14 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: red;
-    color: #333;
+    background-color: RoyalBlue;
+    color: #4169E1;
     font-family: Sans-Serif;
     line-height: 18px;
   }
 
   .wrapper {
-    background: #fff;
+    background: #FFEFD5;
     -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
     -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
     box-shadow: 0 0 10px rgba(0,0,0,.3);
@@ -31,14 +31,14 @@
   }
 
   h1 {
-    font-size: 36px;
-    line-height: 54px;
+    font-size: 32px;
+    line-height: 200px;
   }
 
   h2 {
     border-bottom: 2px solid #ccc;
-    font-size: 24px;
-    line-height: 36px;
+    font-size: 48px;
+    line-height: 72px;
     margin-bottom: 16px;
   }
 
@@ -104,8 +104,8 @@
   }
 
   h1 {
-    font-size: 24px;
-    line-height: 36px;
+    font-size: 90px;
+    line-height: 90px;
   }
 
   h2 {
