--- a/app/views/lifts/show_lift.erb
+++ b/app/views/lifts/show_lift.erb
@@ -18,5 +18,5 @@
 
 <form method="post" action="/lifts/<%= @lift.id %>">
   <input type="hidden" name="_method" value="delete" />
-  <input type="submit" value="Delete Lift" class="p-3 mb-2 bg-danger text-white"/>
+  <font="10"><input type="submit" value="Delete Lift" class="p-3 mb-2 bg-danger text-white"/>
 </form>
