--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,8 +1,7 @@
 Please Login-in
 <form action="/login" method="post">
 <label for="username" > Username: <input type="text" name="username" id="username"></input></label>
-<!-- <label for="email">Email: <input type="text" name="email" id="email"> </input> </label> -->
-<label for="email">Email: <input type="text" name="email" id="email"> </input> </label>
+<label for="password">Password: <input type="text" name="password" id="password"> </input> </label>
 <!-- <input type="submit" id="submit"> -->
 <button type="submit" class = "btn btn-success btn-xs" role = "button">Submit</button>
 </form>
