--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,5 @@
 
-<h1> Welcome, <%= @user.username %>! </h1>
+<% require 'pry' %> 
+<h1> Welcome, <%= @user.username %> </h1>
 
 <li><a href="/lifts/new">Add new lifting sessions</a></li>
