Testing things - issue with visiting signup if logged in

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -2,4 +2,7 @@
 <% require 'pry' %> 
 <h1> Welcome, <%= @user.username %> </h1>
 
-<li><a href="/lifts/new">Add new lifting sessions</a></li>
+<li><a href="/lifts/new">Add new lifting sessions</a></li><br> 
+
+<li><a href="/lifts">See all lifts </a></li><br>
+
