--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -8,6 +8,6 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <div class="jumbotron">
-      <p class="text-primary"><font size="15"> <a href="/login"> Login here! </a> </p>
-
+      <p class="text-primary"><font size="15"> <a href="/login"> Login </a> </p>
+      <p class="text-primary"><font size="15"> <a href="/signup"> Create a new account </a> </p>
       <font size="5"><a href="https://github.com/thebrianemory/corneal">README</a>.</p>
